--- a/example/packs/index.html
+++ b/example/packs/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>spa</title>
-</head>
-<body>
-  <div id="app"></div>
-</body>
+  <head>
+    <title>Example</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
